--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicios JS</title>
 </head>
 <body>
-    
+    <h1>Ejercicios JS</h1>
+    <h2>Ejercicios</h2> 
 </body>
+
+
 <script src="./exercise-1.js"></script>
 <script src="./exercise-2.js"></script>
 <script src="./exercise-3.js"></script>
